--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,16 @@
     "description": "Magento 2 XSD Merger",
     "type": "magento2-module",
     "version": "2.0.0",
-    "license": [
-        "MIT"
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Nicholas Miller",
+            "email": "nick@magekey.com"
+        }
     ],
+    "require": {
+        "php": "~7.0.13|~7.1.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
